src/objects/Blacklist_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Blacklisted_Word__c</fullName>
        <description>stores the word or custom expression which triggered the breach</description>
        <label>Blacklisted Word or Expression</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breached_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Breached By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Blacklist_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unscrubbed_Post__c</fullName>
        <label>Unscrubbed Post</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Blacklist Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLA-{0000}</displayFormat>
        <label>Blacklist Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklist Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>